calculate first part completed

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <h2 class="text-white text-center">Selected-V</h2>
                             <hr class="text-white mt-0">
                             <div>
-                                <ul>
+                                <ul style="padding-left: 0;">
                                     <ol id="setInnerHtml">
                                         
                                     </ol>
@@ -142,7 +142,7 @@
                                  <div class="text-center mt-3">
                                     <button id="calculate-total" class="btn btn-primary">Calculate Total</button>
                                 </div>
-                                <p class="text-white mt-4 mb-5">Total: <span style="margin-left: 50px;"><span>$</span>0</span></p>
+                                <p class="text-white mt-4 mb-5">Total: <span style="margin-left: 50px;"><span>$</span><span id="total-cost">0</span></p>
                             </div>
                             </div>
                           </div>
