--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                  <div class="text-center mt-3">
                                     <button id="calculate-total" class="btn btn-primary">Calculate Total</button>
                                 </div>
-                                <p class="text-white mt-4 mb-5">Total: <span style="margin-left: 50px;"><span>$</span><span id="total-cost">0</span></p>
+                                <p class="text-white mt-4 mb-5">Total: <span style="margin-left: 50px; color: rgb(188, 189, 248); font-size: 20px;">$</span><span id="total-cost" style="color: rgb(188, 189, 248); font-size: 20px;">0</span></p>
                             </div>
                             </div>
                           </div>
@@ -152,7 +152,7 @@
         </div>
     </main>
 
-    <footer style="margin-top: 150px;">
+    <footer class="p-2" style="margin-top: 150px;">
         <div class="container">
                 <hr>
             <div class="text-footer mt-4">
