--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                               <button id="submit4" class="btn btn-primary">SELECT</button>
                             </div>
                           </div>
+
                     </div>
                     <div class="col-lg-3 mb-3 d-flex justify-content-center">
                         <div class="card bg-dark" style="width: 15rem; height: 340px;">
@@ -168,6 +169,7 @@
 
     <!-- js connect -->
     <script src="./js/index.js"></script>
+    <script src="./js/function.js"></script>
     <!-- Bootstrap js link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
